new user form hacking

--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,12 @@
         "font-awesome": "latest",
         "animate.css": "latest",
         "angular": "latest",
-        "angular-route": "latest"
+        "angular-resource": "latest",
+        "angular-cookies": "latest",
+        "angular-mocks": "latest",
+        "angular-route": "latest",
+        "bootstrap": "latest",
+        "angular-bootstrap": "0.10.0",
+        "angular-ui-router": "#master"
     }
 }
